--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ body {
 
 #display {
     grid-area: display;
-    background-color: #4C566A;
+    background-color: #2E3440;
     border-radius: 8px;
     color: #ECEFF4;
     text-align: right;
