--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+:root {
+    --dark-blue-gray: #2e3440;
+    --light-gray: #eceff4;
+    --operator-button: #ebcb8b;
+    --remove-button: #bf616a;
+    --equal-button: #a3be8c;
+    --active-button: #88c0d0;
+}
+
 html {
 	font-family: "Montserrat", sans-serif;
 }
@@ -7,7 +16,7 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	background-color: #2e3440;
+	background-color: var(--dark-blue-gray);
 }
 
 #calculator {
@@ -25,14 +34,14 @@ body {
 	grid-template-columns: repeat(4, 1fr);
 	grid-template-rows: repeat(6, 1fr);
 	gap: 12px;
-	background-color: #eceff4;
+	background-color: var(--light-gray);
 	padding: 24px;
 	border-radius: 8px;
 }
 
 #credit {
 	font-size: 0.9rem;
-	color: #eceff4;
+	color: var(--light-gray);
 	margin: 20px;
 }
 
@@ -43,17 +52,18 @@ body {
 	font-size: 1.4rem;
 	background-color: #e5e9f0;
 	color: #4c566a;
+    transition: .4s;
 }
 
 .button:active {
-	background-color: #88c0d0;
+	background-color: var(--active-button);
 }
 
 #display {
 	grid-area: display;
-	background-color: #2e3440;
+	background-color: var(--dark-blue-gray);
 	border-radius: 8px;
-	color: #eceff4;
+	color: var(--light-gray);
 	text-align: right;
 	font-size: 2.5rem;
 	padding: 0.4rem;
@@ -61,42 +71,42 @@ body {
 
 #clear {
 	grid-area: clear;
-	border-color: #bf616a;
-	color: #bf616a;
+	border-color: var(--remove-button);
+	color: var(--remove-button);
 }
 
 #delete {
 	grid-area: delete;
-	border-color: #bf616a;
-	color: #bf616a;
+	border-color: var(--remove-button);
+	color: var(--remove-button);
 }
 
 #div {
 	grid-area: divide;
-	border-color: #ebcb8b;
-	color: #ebcb8b;
+	border-color: var(--operator-button);
+	color: var(--operator-button);
 }
 
 #mul {
 	grid-area: multiply;
-	border-color: #ebcb8b;
-	color: #ebcb8b;
+	border-color: var(--operator-button);
+	color: var(--operator-button);
 }
 
 #sub {
 	grid-area: substract;
-	border-color: #ebcb8b;
-	color: #ebcb8b;
+	border-color: var(--operator-button);
+	color: var(--operator-button);
 }
 
 #add {
 	grid-area: add;
-	border-color: #ebcb8b;
-	color: #ebcb8b;
+	border-color: var(--operator-button);
+	color: var(--operator-button);
 }
 
 #equal {
 	grid-area: equal;
-	border-color: #a3be8c;
-	color: #a3be8c;
+	border-color: var(--equal-button);
+	color: var(--equal-button);
 }
