--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
 :root {
-    --dark-blue-gray: #2e3440;
+	--dark-gray: #4d4d4d;
     --light-gray: #eceff4;
     --operator-button: #ebcb8b;
     --remove-button: #bf616a;
     --equal-button: #a3be8c;
-    --active-button: #88c0d0;
 }
 
 html {
@@ -16,7 +15,7 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	background-color: var(--dark-blue-gray);
+	background-color: var(--dark-gray);
 }
 
 #calculator {
@@ -33,10 +32,12 @@ body {
 		"zero . equal add";
 	grid-template-columns: repeat(4, 1fr);
 	grid-template-rows: repeat(6, 1fr);
-	gap: 12px;
-	background-color: var(--light-gray);
-	padding: 24px;
-	border-radius: 8px;
+	gap: 15px;
+	padding: 30px;
+	border-radius: 19px;
+	background: var(--dark-gray);
+	box-shadow:  13px 13px 23px #343434,
+				-13px -13px 23px #666666;
 }
 
 #credit {
@@ -46,67 +47,67 @@ body {
 }
 
 .button {
-	border: 2px solid #81a1c1;
-	border-radius: 8px;
+	border-style: none ;
 	font-family: "Montserrat", sans-serif;
 	font-size: 1.4rem;
-	background-color: #e5e9f0;
-	color: #4c566a;
+	color: var(--light-gray);
     transition: .4s;
+	border-radius: 10px;
+	background: var(--dark-gray);
+	box-shadow:  5px 5px 11px #3a3a3a,
+             	-5px -5px 11px #606060;
 }
 
 .button:active {
-	background-color: var(--active-button);
+	border-radius: 10px;
+	background: var(--dark-gray);
+	box-shadow: inset 5px 5px 11px #3a3a3a,
+				inset -5px -5px 11px #606060;
 }
 
 #display {
 	grid-area: display;
-	background-color: var(--dark-blue-gray);
-	border-radius: 8px;
 	color: var(--light-gray);
 	text-align: right;
-	font-size: 2.5rem;
+	font-size: 2.3rem;
 	padding: 0.4rem;
+	border-radius: 10px;
+	background: var(--dark-gray);
+	box-shadow: inset 8px 8px 16px #313131,
+            	inset -8px -8px 16px #696969;
 }
 
 #clear {
 	grid-area: clear;
-	border-color: var(--remove-button);
 	color: var(--remove-button);
 }
 
 #delete {
 	grid-area: delete;
-	border-color: var(--remove-button);
 	color: var(--remove-button);
 }
 
 #div {
 	grid-area: divide;
-	border-color: var(--operator-button);
 	color: var(--operator-button);
 }
 
 #mul {
 	grid-area: multiply;
-	border-color: var(--operator-button);
 	color: var(--operator-button);
 }
 
 #sub {
 	grid-area: substract;
-	border-color: var(--operator-button);
 	color: var(--operator-button);
 }
 
 #add {
 	grid-area: add;
-	border-color: var(--operator-button);
 	color: var(--operator-button);
 }
 
 #equal {
 	grid-area: equal;
-	border-color: var(--equal-button);
 	color: var(--equal-button);
 }
