--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
 }
 
 #calculator {
-	margin-top: 5%;
+	margin-top: 3%;
 	width: 300px;
 	height: 430px;
 	display: grid;
@@ -42,7 +42,18 @@ body {
 #credit {
 	font-size: 0.9rem;
 	color: var(--light-gray);
-	margin: 30px;
+	margin-top: 20px;
+}
+
+#social-links {
+	font-size: 2.4rem;
+    color: var(--light-gray);
+}
+
+#social-links a {
+	text-decoration: none !important;
+	color: inherit;
+	margin: 0 10px 0 10px;
 }
 
 .button {
