--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,13 @@
 	--equal-button: #a3be8c;
 }
 
+html,
+body {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+
 html {
 	font-family: "Montserrat", sans-serif;
 }
@@ -19,7 +26,6 @@ body {
 }
 
 #calculator {
-	margin-top: 3%;
 	width: 300px;
 	height: 430px;
 	display: grid;
@@ -33,26 +39,8 @@ body {
 	grid-template-columns: repeat(4, 1fr);
 	grid-template-rows: repeat(6, 1fr);
 	gap: 15px;
-	padding: 30px;
 	border-radius: 19px;
 	background: var(--dark-gray);
-}
-
-#credit {
-	font-size: 0.9rem;
-	color: var(--light-gray);
-	margin-top: 20px;
-}
-
-#social-links {
-	font-size: 2.4rem;
-	color: var(--light-gray);
-}
-
-#social-links a {
-	text-decoration: none !important;
-	color: inherit;
-	margin: 0 10px 0 10px;
 }
 
 .button {
